# solidaritycsg

./: .clang-format  .gitignore  CMakeLists.txt  README.md
documentation/: Doxyfile
source/: Array.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Makefile  SampleSpace.cpp  SampleSpace.h  SolidarityCSG.h  Vector3.cpp  Vector3.h  Voxelize.cpp  Voxelize.h  make.depend
source/Boolean/: CSGNode.cpp  CSGNode.h
source/FileIO/: Curver.cpp  Curver.h  ImageWriter.h  Mesh.cpp  Mesh.h  MeshReader.h  MeshWriter.h  STLMeshReader.cpp  STLMeshReader.h  STLMeshWriter.cpp  STLMeshWriter.h  TGAImageWriter.cpp  TGAImageWriter.h
source/Polygonize/: Polygonize.cpp  Polygonize.h  TriBuf.cpp  TriBuf.h
source/Voxelize/: BoxVoxelize.cpp  BoxVoxelize.h  MeshVoxelize.cpp  MeshVoxelize.h  SphereVoxelize.cpp  SphereVoxelize.h  TriangleTree.cpp  TriangleTree.h  Voxelize.cpp  Voxelize.h
tools/: CMakeLists.txt  CSGJob.cpp  CSGJob.h  Makefile  csg.cpp  demo.cpp
tools/OS/: OSThread.cpp  OSThread.h  OSTime.cpp  OSTime.h  Platform.h
tools/TinyThread/: tinythread.cpp  tinythread.h
trunk/: README.txt
trunk/documentation/: Doxyfile
trunk/source/: Array.h  BoundingBox.cpp  Makefile  SampleSpace.cpp  SampleSpace.h  SolidarityCSG.h  Vector3.cpp  Vector3.h  Voxelize.cpp  Voxelize.h  make.depend
trunk/source/Boolean/: CSGNode.cpp  CSGNode.h
trunk/source/FileIO/: Curver.h  ImageWriter.h  Mesh.cpp  MeshWriter.h  STLMeshReader.cpp  STLMeshWriter.cpp  STLMeshWriter.h  TGAImageWriter.cpp  TGAImageWriter.h
trunk/source/Polygonize/: Polygonize.cpp  Polygonize.h  TriBuf.h
trunk/source/Voxelize/: BoxVoxelize.cpp  MeshVoxelize.cpp  MeshVoxelize.h  SphereVoxelize.cpp  SphereVoxelize.h  TriangleTree.cpp  Voxelize.cpp  Voxelize.h
trunk/tools/: CSGJob.cpp  CSGJob.h  Makefile  csg.cpp  demo.cpp  demo.xml
trunk/tools/OS/: OSThread.cpp  OSThread.h  OSTime.cpp  Platform.h
trunk/tools/TinyThread/: README.txt  tinythread.cpp  tinythread.h
